test/files/neg/t10806.check
t10806.scala:11: warning: unreachable code
      case e: IllegalArgumentException => println(e.getMessage)
                                                 ^
t10806.scala:17: warning: unreachable code
      case e: IllegalArgumentException => println(e.getMessage)
                                                 ^
t10806.scala:22: warning: unreachable code
      case e: IllegalArgumentException => println(e.getMessage)
                                                 ^
error: No warnings can be incurred under -Werror.
3 warnings
1 error
